# hpm_sdk_demos

./: .gitignore  LICENSE  README.md
tusb_host_msc_wav_playback/: CMakeLists.txt  README.md
tusb_host_msc_wav_playback/inc/: FreeRTOSConfig.h  audio_codec.h
tusb_host_msc_wav_playback/src/: audio_codec.c  main.c  msc_app.c
